--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -94,7 +94,7 @@
       <div class="text-center grow">&#169; Israel Tech Challenge</div>
     </footer>
 
-    <script src="../js/portfolio.js"></script>
-    <script src="../js/home.js"></script>
+    <script src="./js/portfolio.js"></script>
+    <script src="./js/home.js"></script>
   </body>
 </html>
