change paths another views

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -136,7 +136,7 @@
       <p class="footer-info text-center grow"></p>
       <div class="text-center grow">&#169; Israel Tech Challenge</div>
     </footer>
-    <script src="../js/portfolio.js"></script>
-    <script src="../js/contact.js"></script>
+    <script src="./js/portfolio.js"></script>
+    <script src="./js/contact.js"></script>
   </body>
 </html>
