--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -234,7 +234,7 @@
         <div class="text-center grow">&#169; Israel Tech Challenge</div>
       </footer>
     </div>
-    <script src="../js/portfolio.js"></script>
-    <script src="../js/about.js"></script>
+    <script src="./js/portfolio.js"></script>
+    <script src="./js/about.js"></script>
   </body>
 </html>
